# traefik-plugin-treblle-rust

./: .gitignore  Makefile  README.md  diff.txt  docker-compose.yml  generate-rust-toolchain.sh  generate-ssl-certs.sh  rust-toolchain.toml  traefik.yml  traefik_dynamic.yml  traefik_static.yml  validate-wasm-output.sh  wasi-sdk-install.sh  wasm-tools-install.sh  wasmedge-install.sh
certs/: local.crt  local.key
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: main.rs
rust-http-wasm/: .traefik.yml  Cargo.toml  build.sh  traefik-http-handler.wit
rust-http-wasm/src/: bindings.rs  config.rs  constants.rs  error.rs  host_functions.rs  http_client.rs  http_handler.rs  lib.rs  logger.rs  payload.rs  route_blacklist.rs  schema.rs  utils.rs
treblle-api/: Cargo.toml  Dockerfile
treblle-api/src/: main.rs
treblle-wasm-plugin/: .rustfmt.toml  .traefik.yml  Cargo.toml  build.sh
treblle-wasm-plugin/src/: certs.rs  config.rs  constants.rs  error.rs  host_functions.rs  http_client.rs  http_handler.rs  lib.rs  logger.rs  payload.rs  utils.rs  wasi_http_client.rs
