[package]
    name    = "producer"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    tokio      = { version = "1.28.0", features = ["full"] }
    reqwest    = { version = "0.12.7", features = ["json"] }
    serde      = { version = "1.0", features = ["derive"] }
    serde_json = "1.0.96"
    chrono     = "0.4.24"
    rand       = "0.8"
    axum       = "0.6.18"
