[package]
    name    = "rust-http-wasm"
    version = "0.1.0"
    edition = "2021"

[lib]
    crate-type = ["cdylib"]

[dependencies]
    wit-bindgen-rt    = { version = "0.27.0", features = ["bitflags"] }
    wasmedge_http_req = "0.9"
    serde             = { version = "1.0", features = ["derive"] }
    serde_json        = "1.0"
    chrono            = { version = "0.4", default-features = false, features = ["clock"] }
    regex             = "1.5"
    anyhow            = "1.0"

# Reduce wasm binary size
[profile.release]
    lto       = true
    opt-level = 's'
    strip     = "symbols"
