[package]
    name    = "rust-http-wasm"
    version = "0.1.0"
    edition = "2021"

[lib]
    crate-type = ["cdylib"]

[features]
    default = []
    wasm = ["wasmedge_http_req"]

[dependencies]
    chrono = { version = "0.4", default-features = false, features = ["clock"] }
    regex = { version = "1.5", default-features = false, features = [
        "std",
        "unicode-case",
    ] }
    serde = { version = "1.0", features = ["derive"], default-features = false }
    serde_json = { version = "1.0", default-features = false, features = [
        "std",
    ] }
    thiserror = { version = "1.0", default-features = false }
    wit-bindgen-rt = { version = "0.32.0", features = [
        "bitflags",
    ], default-features = false }
    once_cell = "1.19.0"
    wasmedge_http_req = { version = "0.9", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
    reqwest = { version = "0.12.7", features = ["blocking"] }

# Reduce wasm binary size
[profile.release]
    lto           = true
    opt-level     = 'z'
    codegen-units = 1
    panic         = 'abort'
    strip         = true
