[package]
    name    = "treblle-wasm-plugin"
    version = "0.1.0"
    edition = "2021"

[lib]
    crate-type = ["cdylib"]

[features]
    default = ["log", "env_logger"]
    wasm    = ["wasmedge_http_req", "wasmedge_wasi_socket"]

[dependencies]
    chrono = { version = "0.4", default-features = false, features = ["clock"] }
    regex = { version = "1.5", default-features = false, features = [
        "std",
        "unicode-case",
    ] }
    serde = { version = "1.0", features = ["derive"], default-features = false }
    serde_json = { version = "1.0", default-features = false, features = [
        "std",
    ] }
    thiserror = { version = "1.0", default-features = false }
    wit-bindgen-rt = { version = "0.33.0", features = [
        "bitflags",
    ], default-features = false }
    once_cell = "1.19.0"
    wasmedge_http_req = { version = "0.9", optional = true }
    log = { version = "0.4", optional = true }
    env_logger = { version = "0.11.5", optional = true }
    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
    rustls = { version = "0.21", default-features = false, features = [
        "dangerous_configuration",
        "tls12",
    ] }
    webpki-roots = { version = "0.25", default-features = false }
    rustls-pemfile = "2.2.0"
    url = "2.5.2"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
    ring = { version = "0.17.8", features = [
        "less-safe-getrandom-custom-or-rdrand",
    ] }

# Reduce wasm binary size
[profile.release]
    lto           = true
    opt-level     = 's'
    codegen-units = 1
    panic         = 'abort'
    strip         = true
